--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ Resources:
  - TargetService:
      Type: AWS::ECS::Service
      Properties:
-       TaskDefinition: "arn:aws:ecs:us-east-1:711610755347:task-definition/ecs-blue-green-cluster:2"
+       TaskDefinition: "arn:aws:ecs:us-east-1:711610755347:task-definition/ecs-cluster-v1:1"
        LoadBalancerInfo:
-         ContainerName: "ecs-blue-green-container"
+         ContainerName: "ecs-container-version1"
          ContainerPort: 8080
