--- a/appspec.yml
+++ b/appspec.yml
@@ -1,9 +1,9 @@
 version: 0.0
-Resources:
- - TargetService:
+Resources: 
+- TargetService:
      Type: AWS::ECS::Service
      Properties:
-       TaskDefinition: "arn:aws:ecs:us-east-1:711610755347:task-definition/ecs-cluster-v1:1"
+       TaskDefinition: "arn:aws:ecs:eu-central-1:794192817635:task-definition/AWScicd-TD:1"
        LoadBalancerInfo:
-         ContainerName: "ecs-container-version1"
+         ContainerName: "custom-blue"
          ContainerPort: 8080
