--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,15 +1,14 @@
 version: 0.2
-
+ 
 env:
   variables:
-    AWS_REGION: us-east-1 # checkfor specific region
-    AWS_ACCOUNT_ID: 711610755347
-    IMAGE_NAME: bluegreen-deploy-ecs
-    
+    AWS_REGION: eu-central-1
+    AWS_ACCOUNT_ID: 794192817635
+    IMAGE_NAME: awscicd-repo
 phases:
   install:
     runtime-versions:
-      nodejs: 12  
+      nodejs: 18  
     commands:
       # - echo Installing Mocha...
       # - npm install -g mocha (test)
@@ -23,7 +22,7 @@ phases:
       - timeout 15 sh -c "until docker info; do echo .; sleep 1; done"
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com     
-
+ 
   build:
     commands:
       - echo Build started on `date`
