--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ Resources:
 - TargetService:
      Type: AWS::ECS::Service
      Properties:
-       TaskDefinition: "arn:aws:ecs:eu-central-1:613950769510:task-definition/AWSCICD-TaskDefinition:1"
+       TaskDefinition: "arn:aws:ecs:eu-central-1:211125645536:task-definition/aws-td1:2"
        LoadBalancerInfo:
          ContainerName: "awscicd-blue"
          ContainerPort: 8080
